fix arrows and remove extra space in list headers

--- a/assets/css/wpr-admin.css
+++ b/assets/css/wpr-admin.css
@@ -2898,6 +2898,9 @@ div.wpr-tutorial-item {
   padding-bottom: 9px;
   margin-bottom: 10px;
 }
+.wpr-field--categorizedmultiselect .wpr-list .wpr-list-header {
+  max-height: 32px;
+}
 .wpr-field--categorizedmultiselect .wpr-list [type=checkbox] + label:before {
   top: 4px;
 }
