--- a/src/scss/components/fields/_categorizedmultiselect.scss
+++ b/src/scss/components/fields/_categorizedmultiselect.scss
@@ -19,6 +19,9 @@
 		margin-bottom: 10px;
 	  }
 	}
+	.wpr-list-header{
+	  max-height:32px;
+	}
 
 	[type=checkbox]{
 	  & + label{
